Added profile, schema was simplified
Client removed, pkg package removed as well
